[gd_scene load_steps=9 format=3 uid="uid://btptikmuqrtr7"]

[ext_resource type="Script" uid="uid://dohlp05xdmsw8" path="res://scripts/main_menu.gd" id="1_bqqt6"]
[ext_resource type="Texture2D" uid="uid://dv2htjcef1bf4" path="res://assets/background.jpg" id="1_l6cm7"]
[ext_resource type="FontFile" uid="uid://befqt586gplr4" path="res://assets/font.ttf" id="2_ekxnf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l6cm7"]
texture = ExtResource("1_l6cm7")
modulate_color = Color(0.505344, 0.505344, 0.505344, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekxnf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(1, 0.588235, 0.776471, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
bg_color = Color(1, 0.392157, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu84c"]
bg_color = Color(1, 0.823529, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bqqt6")

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_l6cm7")

[node name="MainMenu" type="Node" parent="."]

[node name="MainButtons" type="VBoxContainer" parent="MainMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -74.0
offset_right = 200.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14
alignment = 1

[node name="Start" type="Button" parent="MainMenu/MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_wu84c")
text = "Play"
icon_alignment = 1

[node name="Settings" type="Button" parent="MainMenu/MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_wu84c")
text = "Settings"
icon_alignment = 1

[node name="Quit" type="Button" parent="MainMenu/MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_wu84c")
text = "Quit"
icon_alignment = 1

[node name="Title" type="Label" parent="MainMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.5
offset_top = -262.0
offset_right = 245.5
offset_bottom = -161.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 100
text = "Loop Around!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -144.0
offset_right = 275.0
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsLabel" type="Label" parent="Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_right = 300.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButtons" type="VBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14
alignment = 1

[node name="Back" type="Button" parent="Settings/SettingsButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_wu84c")
text = "back"
icon_alignment = 1

[connection signal="pressed" from="MainMenu/MainButtons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainMenu/MainButtons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainMenu/MainButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Settings/SettingsButtons/Back" to="." method="_on_back_pressed"]
